att sobre login e registro
agora o site tem uma alert de de erro caso a senha estive errada ou caso não existe a conta, e também foi adicionado a primeira versão da parte logada do site

--- a/login.html
+++ b/login.html
@@ -16,13 +16,13 @@
         </div>
         <div class="conteudoLogin">
             <img src="Imagens/cesta-de-compras.png" alt="Uma imagen de uma cesta de produtos">
-            <form action="Html/segundaParte.html" method="post">
+            <form action="php/logging.php" method="post">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
                 <label for="password">Senha:</label>
                 <input class="layerbluer" type="password" id="password" name="password" required>
                 <p>Não tem uma conta? <a href="Html/Registro.html" class="registro"> Registro</a></p>
-                <button type="submit"><a href="#">Login</a></button>
+                <button type="submit">Login</button>
             </form>
         </div>
     </main>
