--- a/Html/registro.html
+++ b/Html/registro.html
@@ -16,7 +16,7 @@
                 <input type="email" id="email" name="email" required>
                 <label for="password">Senha:</label>
                 <input class="layerbluer" type="password" id="password" name="password" required>
-                <button type="submit"><a href="#">Cadastro</a></button>
+                <button type="submit">Cadastro</button>
             </form>
         </div>
     </main>
