--- a/Html/segundaParte.html
+++ b/Html/segundaParte.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="PT-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../Css/segundaParte.css">
+    <title>MixControle</title>
 </head>
+
 <body>
-    
+    <main>
+        <div class="bloco">
+
+            <h2>Mix Controle</h2>
+                <ul>
+                    <li>ADD ITEMS</li>
+                    <li>ROMVE</li>
+                    <li>VENDE</li>
+                </ul>
+
+                <ul id="sair">
+                     <li>SAIR</li>
+                </ul>
+        </div>
+    </main>
+
 </body>
+
 </html>
