--- a/Html/segundaParte.html
+++ b/Html/segundaParte.html
@@ -11,20 +11,24 @@
 <body>
     <main>
         <div class="bloco">
-
             <h2>Mix Controle</h2>
-                <ul>
-                    <li>ADD ITEMS</li>
-                    <li>ROMVE</li>
-                    <li>VENDE</li>
-                </ul>
+            <ul>
+                <li>Adicionar itens</li>
+                <li>Remover</li>
+                <li>Editar</li>
+            </ul>
 
-                <ul id="sair">
-                     <li>SAIR</li>
-                </ul>
+            <ul id="sair">
+                <li id="botaoDeSaida">SAIR</li>
+            </ul>
         </div>
     </main>
-
+    <script>
+        document.getElementById('botaoDeSaida').addEventListener('click', function() {
+            // Redireciona para o script de logout
+            window.location.href = '../php/logout.php';
+        });
+    </script>
 </body>
 
 </html>
