--- a/Html/registro.html
+++ b/Html/registro.html
@@ -8,15 +8,24 @@
 </head>
 <body>
     <main>
+        <div class="conteudoInformacao layerbluer">
+            <div class="irLogin">
+            <h1>Bem-Vindo de Volta!</h1>
+            <p>Acesse sua conta</p>
+            <a href="../login.html"><h4>ENTRAR</h4></a>
+            </div>
+        </div>     
         <div class="registro">
+            <h2>Crie sua conta</h2>
+            <p>Preencha seus dados</p>
             <form action="../php/request.php" method="POST">
-                <label for="name">Nome:</label>
-                <input type="text" id="name" name="name" required>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <label for="password">Senha:</label>
-                <input class="layerbluer" type="password" id="password" name="password" required>
-                <button type="submit">Cadastro</button>
+                <img class="iconLogin" src="../Imagens/Vector.png" alt="icon de uma boneco de login">
+                <input type="text" id="name" name="name" required placeholder="Nome ">
+                <img class="iconEmail" src="../Imagens/mdi_email-outline.png" alt="icone de email">
+                <input type="email" id="email" name="email" placeholder="Email" required>
+                <img class="iconSenha" src="../Imagens/iconSenha.png" alt="icon de uma cadeado">
+                <input class="layerbluer" type="password" id="password" name="password" placeholder="Senha" required>
+                <button type="submit">CADASTRAR</button>
             </form>
         </div>
     </main>
