mediaQuery do Registro
Foi feito o mediaQuery para algumas resolução de tela

--- a/Html/registro.html
+++ b/Html/registro.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Css/registro.css">
+    <link rel="stylesheet" href="../mediaQuery/mediaQueryRegistro.css">
     <title>Registro</title>
 </head>
 <body>
     <main>
-        <div class="conteudoInformacao layerbluer">
+        <div class="conteudoInformacao">
             <div class="irLogin">
             <h1>Bem-Vindo de Volta!</h1>
             <p>Acesse sua conta</p>
